1.SOInvocie "ADD ORDER" Add Order Date Field

--- a/LUMTCYCustomization/LUMTCYCustomization/LUMTCYCustomization.csproj
+++ b/LUMTCYCustomization/LUMTCYCustomization/LUMTCYCustomization.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Examples.cs" />
     <Compile Include="Graph_Extension\JournalEntryExtension.cs" />
     <Compile Include="Graph_Extension\SOCreatShipmentExtension.cs" />
+    <Compile Include="Graph_Extension\SOInvoiceEntryExtension.cs" />
     <Compile Include="Graph_Extension\SOShipmentEntryExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
