1.Account Summary - 四個欄位更改為固定顯示小數點2位 2.SOShipment - 當Create shipment from SOOrder會帶入Descr 3.Process Order - 新增Shipment descr 藍位

--- a/LUMTCYCustomization/LUMTCYCustomization/LUMTCYCustomization.csproj
+++ b/LUMTCYCustomization/LUMTCYCustomization/LUMTCYCustomization.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Examples.cs" />
+    <Compile Include="Graph_Extension\AccountHistoryEnqExtension.cs" />
     <Compile Include="Graph_Extension\JournalEntryExtension.cs" />
     <Compile Include="Graph_Extension\SOCreatShipmentExtension.cs" />
     <Compile Include="Graph_Extension\SOShipmentEntryExtension.cs" />
